[이주용] - 파일 업로드 구현, 내 프로필 보기 화면 구성중

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -59,9 +59,9 @@ section > #signup-box {
 	border-radius:35px;
 }
 
-#feed-imgVideo {
+.feed-imgVideo {
 	height:400px;
-	background-color:red;
+	background-color:blue;
 }
 
 .like-icon, .comment-icon {
