[이주용] - 좋아요 버튼 누를 시 DB insert, delete 구현 중

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -39,11 +39,7 @@ section > #signup-box {
 	border-radius:3px;
 }
 
-#story-user-profile {
-	cursor:pointer;
-}
-
-#feed-user-profile {
+#story-user-profile, #feed-user-profile {
 	cursor:pointer;
 }
 
@@ -69,7 +65,7 @@ section > #signup-box {
 	height:25px;
 }
 
-.like-box {
+.like-box, .comment-box {
 	cursor:pointer;
 }
 
