[이주용] - 좋아요 기능 (insert, delete, 새로고침시 유지) 구현 완료 - 게시물 더보기 , 댓글 더보기 기능 구현중

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -39,7 +39,7 @@ section > #signup-box {
 	border-radius:3px;
 }
 
-#story-user-profile, #feed-user-profile {
+.story-user-profile, .feed-user-profile {
 	cursor:pointer;
 }
 
